fdo#75259: Let undo document share its string pool with the source doc.

We already do that for the pool helper.  It would only make sense to do
it for shared strings as well.

Change-Id: I813d262799af6f0c1d3fa12246ad973f852ac199